# testingCUDA

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  proj
src/: cudafile.cu  examplewindow.cpp  examplewindow.h  main.cpp
